# serde-versioning

./: .gitmodules  Cargo.toml  README.md  bacon.toml  clippy.toml  generate_diff.sh  rustfmt.toml
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: fmt.yml  publish.yml
examples/: orig.rs  usage.rs
src/: attributes.rs  compile_error.rs  deserialize_impl.rs  from_default.rs  lib.rs  serde_derive_implementation.rs  utils.rs
src/serde_derive_implementation/: bound.rs  de  de.rs  deprecated.rs  dummy.rs  fragment.rs  internals  pretend.rs  ser.rs  this.rs
