[package]
name = "serde-versioning"
version = "1.0.215" # same as serde version used here
edition = "2021"
authors = ["Victor LEFEBVRE <contact@vic1707.xyz>"]
description = "Add versioning support to `serde`'s `Deserialize` derive macro."
# documentation = "https://docs.rs/serde-versioning"
homepage = "https://github.com/vic1707/serde-versioning"
license = "WTFPL"
readme = "README.md"
repository = "https://github.com/vic1707/serde-versioning"
include = ["src/**/*", "Cargo.toml", "Cargo.lock", "README.md", "LICENSE"]
categories = ["encoding", "no-std", "no-std::no-alloc"]
keywords = ["serde", "versioning", "deserialization", "serialization", "no_std"]
rust-version = "1.65.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.89"
quote = "1.0.37"
syn = { version = "2.0.87", features = ["full"] }

[dev-dependencies]
serde = "1.0.215"
# serde_derive = "1.0.215" # used by `generate_diff.sh` script
serde_json = "1.0.132"
